Fix compiling error